--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
   </head>
 
   <body>
-    <header class="p-5 mb-4">
-      <h1 class="display-3">Work Day Scheduler</h1>
+    <div class="container-fluid px-5 mt-5 mb-5">
+      <header class="row">
+        <h1 class="col-9 col-md-10">Work Day Scheduler</h1>
+        <button class="clearBtn col-3 col-md-2">Clear All</button>
+      </header>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
-    </header>
+    </div>
+
     <div class="container-fluid px-5" id="hours">
 
       <div id="hour-8" class="row time-block">
